# pdns-logger

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  do_indent.sh
cmake/: DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  FindProtobufC.cmake  FindSqlite3.cmake  FindSystemd.cmake  HeadersChecks.cmake  ModuleHelpers.cmake  ProjectDefaults.cmake  ProjectFunctions.cmake  TDDHelpers.cmake  TestInline.c  TestInline.cmake  VersionString.cmake
config/: CMakeLists.txt  pdns-logger.ini.in
debian/: changelog  control  copyright  pdns-logger.dirs  pdns-logger.init  pdns-logger.install  pdns-logger.postinst  rules
src/: CMakeLists.txt  dnsmessage.pb-c.c  dnsmessage.pb-c.h  dnsmessage.proto  pdns-logger-dns.c  pdns-logger-dns.h  pdns-logger-file.c  pdns-logger-ini.c  pdns-logger-protobuf.c  pdns-logger-queue.c  pdns-logger-sqlite.c  pdns-logger-syslog.c  pdns-logger.c  pdns-logger.h.in
src/inih/: README.md  ini.c  ini.h
